[tool.poetry]
name = "bashdown"
version = "0.1.0"
description = "Executes in-line bash in markdown files"
authors = ["Mark Sellors <github@5vcc.com>"]
readme = "README.md"
repository = "https://github.com/python-poetry/poetry"
homepage = "https://python-poetry.org/"


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bashdown = "bashdown:main"

