[tool.poetry]
name = "bashdown"
version = "0.5.0"
description = "Executes in-line bash in markdown files"
authors = ["Mark Sellors <github@5vcc.com>"]
readme = "README.md"
repository = "https://github.com/sellorm/bashdown"
homepage = "https://blog.sellorm.com/projects"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bashdown = "bashdown:main"

